[package]
name = "libp2p-kad-server"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p", features = [
    "tokio",
] }
libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = ["full"] }
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
anyhow = "1.0.86"
futures = "0.3.30"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
